- fix alignment on Banner navigation - added hover color on buttons - removed the pattern in the calendar blocks - moved the calendar select at the top of the calendar homepage

--- a/app/assets/stylesheets/frontend/_buttons.scss
+++ b/app/assets/stylesheets/frontend/_buttons.scss
@@ -14,9 +14,12 @@
 	@include transition;
 
 	&:hover {
-		border:1px solid $linkHover;
-		color:$linkHover;
-		background:none;
+		//border:1px solid $linkHover;
+		//color:$linkHover;
+		//background:none;
+		background: $greenDarkColor;
+			border: 1px solid $greenDarkColor;
+			color:#fff;
 	}
 
 	&.big {
