--- a/app/assets/stylesheets/shared/calendar.scss
+++ b/app/assets/stylesheets/shared/calendar.scss
@@ -22,7 +22,7 @@ th.fc-day-header {
  }
 
 .fc-event {
-  background: asset-url("line-pattern.png") repeat scroll 0 0;
+  //background: asset-url("line-pattern.png") repeat scroll 0 0;
   color: #fff;
   font-family: "Lato", sans-serif;
   font-size: 16px;
